# ITOL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  __main__.py  cli.py  config.py  judge.py  metrics.py  rate_limit.py
bench/report/: __init__.py  generate_html.py  generate_pdf.py
bench/report/templates/: report.html.j2
bench/runners/: __init__.py  baseline.py  itol_run.py
bench/workloads/: __init__.py  agent_loop.py  faq_cache.py  multi_turn_chat.py  rag_doc_chat.py
calibration/: __init__.py  bootstrap.py  corpora.py  fit.py  judge.py  synth_agent.py
calibration/data/: paraphrase_pairs.json  synthetic_chat.json
data/bench_corpora/: hotpotqa_150_real.jsonl
data/calibration/: bandit_priors.json  manifest_gold.jsonl  manifest_recall.json  qps.json  tau.json
deploy/: Dockerfile  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  service.yaml
itol/: __init__.py  cli.py  config.py  engine.py  icr.py  segmenter.py  signals.py  smoke_test.py
itol/adapters/: __init__.py  anthropic_.py  base.py  cohere.py  deepseek.py  gemini.py  groq.py  mistral.py  ollama.py  openai_.py  openai_compatible_base.py  openrouter.py
itol/analysis/: __init__.py  classifier.py  classifier_ml.py  manifest.py
itol/cache/: __init__.py  invalidation.py  l0_exact.py  l1_semantic.py  l2_template.py  rerank.py  store.py  vector_index.py
itol/data/: fillers.txt  qualifiers.txt  verb_lexicon.json
itol/embed/: __init__.py  onnx_embedder.py
itol/multitenancy/: __init__.py  auth.py  config.py  quota.py
itol/proxy/: dashboard.py  server.py
itol/proxy/static/: dashboard.html
itol/quality/: __init__.py  bandit.py  breakeven.py  circuit.py  parity.py  qps.py  shadow.py
itol/routing/: __init__.py  matrix.py
itol/strategies/: __init__.py  base.py  s1_dedupe.py  s2_instruction.py  s2_llm_rewrite.py  s3_window.py  s4_racr.py  s5_distill.py  s6_hygiene.py  s7_lossy.py
itol/telemetry/: __init__.py  metrics.py  recorder.py  tracing.py
jobs/: __init__.py  s2_rewrite_job.py
scripts/: prepare_hotpotqa_slice.py  seed_dashboard_demo.py  train_classifier.py
tests/: test_adapter_conformance.py  test_hotpotqa_prep.py  test_icr_config_invariants.py  test_manifest_invariants.py  test_segmenter_signals_invariants.py
tests/e2e/: test_full_pipeline.py
tests/invariants/: test_CR1.py  test_CR10.py  test_CR11.py  test_CR12_CR3b_CR16.py  test_CR13.py  test_CR14.py  test_CR15.py  test_CR19.py  test_CR2.py  test_CR20.py  test_CR21_CR22.py  test_CR21_S3.py  test_CR23.py  test_CR24.py  test_CR25.py  test_CR26.py  test_CR4.py  test_CR5.py  test_CR6.py  test_CR7.py  test_CR8.py  test_CR9.py  test_classifier_ml_graceful_fallback.py  test_cli_and_helm.py  test_dockerfile.py  test_multitenancy.py  test_proxy_server.py  test_s2_llm_rewrite.py  test_s4_racr.py  test_s7_lossy.py  test_tracing.py
