[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "itol"
version = "0.1.0"
description = "Intelligent Token Optimization Layer"
requires-python = ">=3.11"
dependencies = []   # runtime deps added per build step

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["itol*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
